--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@
 title: Deren's blog
 email: strloong@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  
+  I leave no trace of wings in the air,
+  but I am glad I have had my flight.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://derenchen.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
