--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Deren‘s blog
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+description: I leave no trace of wings in the air but I am glad I have had my flight.
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
