--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Deren‘s blog
-logo: /assets/img/logo.png
+logo: ./img/logo.png
 description: I leave no trace of wings in the air but I am glad I have had my flight.
